src/test/ui/consts/issue-64506.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/issue-64506.rs:14:22
   |
LL |     let x = unsafe { Foo { b: () }.a };
   |                      ^^^^^^^^^^^^^^^ type validation failed at .inner: encountered a value of uninhabited type AnonPipe

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
